tests/ui/binding/const-param.stderr
error[E0158]: constant parameters cannot be referenced in patterns
  --> $DIR/const-param.rs:5:9
   |
LL | fn check<const N: usize>() {
   |          -------------- constant defined here
LL |     match 1 {
LL |         N => {}
   |         ^ can't be used in patterns

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0158`.
